--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-
         android:name=".TwitterApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -39,7 +38,7 @@
         <activity android:name=".TweetDetails" />
         <activity android:name=".ReplyTweet" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".FollowActivity"></activity>
+        <activity android:name=".FollowActivity" />
     </application>
 
 </manifest>
